// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render BeersSummary with 1 beer 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BeersSummary
    beerCount={1}
    beersTotal={195}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1>
        Viewing 
         
        beers
         totalling for 
        $195
      </h1>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Viewing ",
          undefined,
          " ",
          "beers",
          " totalling for ",
          "$195",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Viewing ",
        undefined,
        " ",
        "beers",
        " totalling for ",
        "$195",
      ],
      "type": "h1",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1>
          Viewing 
           
          beers
           totalling for 
          $195
        </h1>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Viewing ",
            undefined,
            " ",
            "beers",
            " totalling for ",
            "$195",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Viewing ",
          undefined,
          " ",
          "beers",
          " totalling for ",
          "$195",
        ],
        "type": "h1",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should correctly render BeersSummary with multiple beers 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BeersSummary
    beerCount={23}
    beersTotal={195233}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1>
        Viewing 
         
        beers
         totalling for 
        $195,233
      </h1>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Viewing ",
          undefined,
          " ",
          "beers",
          " totalling for ",
          "$195,233",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Viewing ",
        undefined,
        " ",
        "beers",
        " totalling for ",
        "$195,233",
      ],
      "type": "h1",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1>
          Viewing 
           
          beers
           totalling for 
          $195,233
        </h1>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Viewing ",
            undefined,
            " ",
            "beers",
            " totalling for ",
            "$195,233",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Viewing ",
          undefined,
          " ",
          "beers",
          " totalling for ",
          "$195,233",
        ],
        "type": "h1",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
